src/objects/Eventbrite_Connector_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>API_User_Key__c</fullName>
        <label>API User Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <label>Campaign Member Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Record_Type_for_New_Campaigns__c</fullName>
        <label>Campaign Record Type for New Campaigns</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <label>Campaign Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type_for_New_Campaigns__c</fullName>
        <label>Campaign Type for New Campaigns</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, we will create new accounts when company name is not unrecognized.</inlineHelpText>
        <label>Create Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Opps_for_Free_Tickets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Opportunities for Free Tickets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Contact_Role__c</fullName>
        <label>Opp Contact Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type_Id__c</fullName>
        <label>Opp Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <defaultValue>&quot;Closed Won&quot;</defaultValue>
        <label>Opp Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_for_Campaign__c</fullName>
        <inlineHelpText>0 = Existing Campaign, 1 = New Campaign, 2 = No Campaign</inlineHelpText>
        <label>Option for Campaign</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_for_Leads_or_Contacts__c</fullName>
        <inlineHelpText>0 = Create Leads, 1 = Create Contacts, 2 = Create Contacts and Opps</inlineHelpText>
        <label>Option for Leads or Contacts</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overwrite_Contact_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Update contact phone and address from Eventbrite even when they already have values in Salesforce.</inlineHelpText>
        <label>Overwrite Contact Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Existing_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Existing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Eventbrite Settings</label>
</CustomObject>